# binderbench

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: default.yaml
examples/: candidate_mutations.csv
reports/: analysis_report.md  application_fit.md  references.md
results/: candidate_rankings.csv  fold_metrics.csv  metrics.csv  oof_predictions.csv
scripts/: github_upload_commands.sh  run_full_pipeline.sh
src/binderbench/: data.py  embeddings.py  rank_designs.py  train.py
src/ciis_binderbench/: features.py  report.py  utils.py
tests/: test_mutation_parser.py
