[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binderbench"
version = "0.1.0"
description = "Hybrid AI + physics-informed PPI binder optimization benchmark for SKEMPI 2.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Noor Ul Ain Zahra"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "biopython>=1.83",
    "optuna>=3.6",
    "tabulate>=0.9",
]

[project.optional-dependencies]
core = []
esm = ["torch>=2.2", "transformers>=4.40"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
